fixed calculator alignment

--- a/styles/menu_mobile.css
+++ b/styles/menu_mobile.css
@@ -8,11 +8,8 @@
     /* ajust calculator position */
     body {
         justify-content: space-between;
-        height: 100vh;
-    }
-
-    #calculator {
-        margin-bottom: 20%;
+        gap: 1.2em;
+        height: 100%;
     }
 
     /* style menu */
